added prototype week

--- a/muestra/Prototipo/index.html
+++ b/muestra/Prototipo/index.html
@@ -41,39 +41,147 @@
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Martes</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Martes</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Miércoles</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Miércoles</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Jueves</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Jueves</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Viernes</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Viernes</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Sábado</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Sábado</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div class="modal-calendar-day">
-				<button onclick="cerrarDia()">Cerrar</button>
-				<h1>Domingo</h1>
-
+				<div class="modal-calendar-container">
+					<div class="modal-calendar-day-container-title">
+						<h2>Domingo</h2>
+					</div>
+					<div class="modal-calendar-day-container-routine">
+						<p class="modal-calendar-time modal-calendar-time-00-00hs">00:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-00-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-06-00hs">06:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-06-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-12-00hs">12:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-12-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-18-00hs">18:00hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-18-00hs">&nbsp;</span>
+						<p class="modal-calendar-time modal-calendar-time-23-59hs">23:59hs</p>
+						<span class="modal-calendar-separator modal-calendar-separator-23-59hs">&nbsp;</span>
+					</div>
+					<div class="modal-calendar-buttons">
+						<button class="add-btn" onclick="agregarHorarios()">Agregar horarios</button>
+						<button class="close-btn" onclick="cerrarDia()">Cerrar</button>
+					</div>
+				</div>
 			</div>
 
 			<div id="calendar-container">
