--- a/muestra/Prototipo/index.html
+++ b/muestra/Prototipo/index.html
@@ -315,7 +315,8 @@
 				<input type="number" name="fin" id="nuevo-horario-fin" />
 				<input type="text" name="tag" id="nuevo-horario-tag" />
 				<input type="color" name="color" id="nuevo-horario-color" />
-				<button type="button" onclick="agregarNuevoHorario()">Aceptar</button> 
+				<button type="button" onclick="agregarNuevoHorario()">Aceptar</button>
+				<button type="button" onclick="cerrarElemento('modificar-horario')">Cancelar</button>
 			</div>
 		</section>
 
